# Mytaskking-bestie

./: .gitignore  README.md  callertheme.html  calls.md  sample_telecaller_leads_100.xlsx
.github/workflows/: build-apk.yml
backend/: .env.example  Dockerfile  README.md  ecosystem.config.js  eslint.config.js  package-lock.json  package.json
backend/prisma/: README.md  schema.prisma
backend/scripts/: setup.sh  verify-production-deploy.sh
backend/src/: app.js  worker.js
backend/src/config/: index.js
backend/src/database/: prisma.js  repository.js  seed.js
backend/test/: prismaStub.js  smoke.test.js
deploy/: backup.sh  docker-compose.yml  nginx.conf.sample  restore.sh  rollback.sh
docs/: API.md  ARCHITECTURE.md  ENTERPRISE.md  EXTENSIONS.md  INFRASTRUCTURE.md
frontend/: calls-md-web-test.html
frontend/flutter_apps/: README.md
frontend/flutter_apps/windows_app/desktop_stubs/record_windows/windows/: CMakeLists.txt  record_windows_plugin.cpp  record_windows_plugin.h
frontend/payment_modal/: .env.example  ecosystem.config.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/react_web/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mytasking-Callscreen-main/: .gitignore  README.md  pubspec.yaml
mytasking-Callscreen-main/lib/: main.dart
mytasking-Callscreen-main/linux/: CMakeLists.txt
mytasking-Callscreen-main/test/: widget_test.dart
mytasking-Callscreen-main/web/: index.html  manifest.json
mytasking-Callscreen-main/windows/: CMakeLists.txt
(+542 files in other folders)
